--- a/index.html
+++ b/index.html
@@ -6,10 +6,14 @@
   <title>Elwyn AI — Assist. Create. Empower.</title>
   <meta name="theme-color" content="#7A1E2C" />
   <base href="/" />
+
+  <!-- Fonts -->
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;600;700&display=swap" rel="stylesheet">
-  <link rel="stylesheet" href="/assets/styles.css" />
+
+  <!-- SITE CSS (cache-busted) -->
+  <link rel="stylesheet" href="/assets/styles.css?v=2" />
 </head>
 <body>
   <header class="topbar">
@@ -45,6 +49,7 @@
     </aside>
 
     <section class="content" id="view">
+      <!-- Chat -->
       <section class="panel is-visible" data-panel="chat">
         <div class="card">
           <div class="card-head">
@@ -64,6 +69,7 @@
         </div>
       </section>
 
+      <!-- Text → Image -->
       <section class="panel" data-panel="image">
         <div class="card">
           <div class="card-head"><h2>Text → Image</h2><p class="muted">High-quality images with GPT Image, with automatic fallback.</p></div>
@@ -75,16 +81,20 @@
         </div>
       </section>
 
+      <!-- Text → Sound (placeholder) -->
       <section class="panel" data-panel="audio">
-        <div class="card"><div class="card-head"><h2>Text → Sound</h2></div>
+        <div class="card">
+          <div class="card-head"><h2>Text → Sound</h2></div>
           <p class="muted">Coming next: natural voices and audio prompts.</p>
           <form id="audForm"><button class="btn" type="submit">Try</button></form>
           <pre id="audOut" class="mono muted"></pre>
         </div>
       </section>
 
+      <!-- Text → Video (placeholder) -->
       <section class="panel" data-panel="video">
-        <div class="card"><div class="card-head"><h2>Text → Video</h2></div>
+        <div class="card">
+          <div class="card-head"><h2>Text → Video</h2></div>
           <p class="muted">Short clips for explainers & promos (to be wired).</p>
           <form id="vidForm"><button class="btn" type="submit">Try</button></form>
           <pre id="vidOut" class="mono muted"></pre>
@@ -103,6 +113,7 @@
     </div>
   </footer>
 
-  <script src="/assets/app.js"></script>
+  <!-- APP JS (cache-busted) -->
+  <script src="/assets/app.js?v=2"></script>
 </body>
 </html>
