--- a/index.html
+++ b/index.html
@@ -3,36 +3,29 @@
 <head>
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width,initial-scale=1" />
-  <title>Elwyn AI — Assist. Create. Empower.</title>
-  <meta name="theme-color" content="#7A1E2C" />
+  <title>Elwyn AI</title>
+  <meta name="theme-color" content="#7A012E" />
   <base href="/" />
-
-  <!-- Fonts -->
-  <link rel="preconnect" href="https://fonts.googleapis.com">
-  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-  <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;600;700&display=swap" rel="stylesheet">
-
-  <!-- SITE CSS (cache-busted) -->
-  <link rel="stylesheet" href="/assets/styles.css?v=2" />
+  <link rel="stylesheet" href="/assets/styles.css" />
 </head>
 <body>
+  <!-- Top bar -->
   <header class="topbar">
     <div class="wrap">
-      <a class="brand" href="/"><div class="logo">E</div><div class="brand-text"><strong>Elwyn</strong> <span class="sub">AI</span></div></a>
-      <nav class="topnav">
-        <span class="chip success" id="apiStatus">checking…</span>
-        <select id="engineSelect" class="engine">
-          <option value="latest" selected>Latest (auto)</option>
-          <option value="gpt-5-thinking">GPT-5 Thinking</option>
-          <option value="gpt-5">GPT-5</option>
-          <option value="gpt-4o">GPT-4o</option>
-          <option value="gpt-4o-mini">GPT-4o mini</option>
-        </select>
-      </nav>
+      <a class="brand" href="/"><div class="logo">E</div><div class="brand-text"><strong>Elwyn</strong> AI</div></a>
+      <span class="chip success" id="apiStatus">checking…</span>
+      <select id="engineSelect" class="engine">
+        <option value="latest" selected>Latest (auto)</option>
+        <option value="gpt-5-thinking">GPT-5 Thinking</option>
+        <option value="gpt-5">GPT-5</option>
+        <option value="gpt-4o">GPT-4o</option>
+        <option value="gpt-4o-mini">GPT-4o mini</option>
+      </select>
     </div>
   </header>
 
   <main class="layout">
+    <!-- Sidebar -->
     <aside class="side">
       <div class="side-group">
         <div class="side-title">Tools</div>
@@ -41,13 +34,15 @@
         <button class="side-link" data-view="audio">Text → Sound (soon)</button>
         <button class="side-link" data-view="video">Text → Video (soon)</button>
       </div>
+
       <div class="side-group small">
         <div class="side-title">About</div>
-        <p class="muted">One page interface for global-scale AI services inspired by Elwyn’s mission.</p>
+        <p class="muted tiny">One page interface for global-scale AI services.</p>
         <p class="muted tiny">API: <code>elwyn.emailpeterokeke.workers.dev</code></p>
       </div>
     </aside>
 
+    <!-- Content panels -->
     <section class="content" id="view">
       <!-- Chat -->
       <section class="panel is-visible" data-panel="chat">
@@ -56,10 +51,11 @@
             <h2>Ask Elwyn AI</h2>
             <p class="muted">Helpful, concise assistance. “Latest” aims for GPT-5 Thinking when available.</p>
           </div>
+
           <div class="chat">
             <div id="chatLog" class="chat-log"></div>
             <form id="chatForm" class="chat-input">
-              <textarea id="chatBox" rows="3" placeholder="Ask anything…" autocomplete="off"></textarea>
+              <textarea id="chatBox" rows="4" placeholder="Ask anything…" autocomplete="off"></textarea>
               <div class="row">
                 <button class="btn primary" type="submit">Send</button>
                 <button class="btn" type="button" id="clearChat">Clear</button>
@@ -69,33 +65,31 @@
         </div>
       </section>
 
-      <!-- Text → Image -->
+      <!-- Image -->
       <section class="panel" data-panel="image">
         <div class="card">
-          <div class="card-head"><h2>Text → Image</h2><p class="muted">High-quality images with GPT Image, with automatic fallback.</p></div>
+          <div class="card-head"><h2>Text → Image</h2><p class="muted">High-quality images via the Worker.</p></div>
           <form id="imgForm" class="form">
-            <textarea id="imgPrompt" rows="3" placeholder="e.g., warm, welcoming illustration of inclusive community support"></textarea>
+            <textarea id="imgPrompt" rows="3" placeholder="e.g., warm, welcoming illustration…"></textarea>
             <div class="row"><button class="btn primary" type="submit">Generate</button></div>
           </form>
-          <div id="imgOut" class="img-out"></div>
+          <div id="imgOut" class="mt"></div>
         </div>
       </section>
 
-      <!-- Text → Sound (placeholder) -->
+      <!-- Audio (placeholder) -->
       <section class="panel" data-panel="audio">
         <div class="card">
-          <div class="card-head"><h2>Text → Sound</h2></div>
-          <p class="muted">Coming next: natural voices and audio prompts.</p>
+          <div class="card-head"><h2>Text → Sound</h2><p class="muted">Coming next.</p></div>
           <form id="audForm"><button class="btn" type="submit">Try</button></form>
           <pre id="audOut" class="mono muted"></pre>
         </div>
       </section>
 
-      <!-- Text → Video (placeholder) -->
+      <!-- Video (placeholder) -->
       <section class="panel" data-panel="video">
         <div class="card">
-          <div class="card-head"><h2>Text → Video</h2></div>
-          <p class="muted">Short clips for explainers & promos (to be wired).</p>
+          <div class="card-head"><h2>Text → Video</h2><p class="muted">Short clips for explainers & promos (soon).</p></div>
           <form id="vidForm"><button class="btn" type="submit">Try</button></form>
           <pre id="vidOut" class="mono muted"></pre>
         </div>
@@ -106,14 +100,11 @@
   <footer class="footer">
     <div class="wrap foot">
       <div>© 2025 Elwyn AI — crafted for clarity & care</div>
-      <div class="links">
-        <a href="https://www.elwyn.org" target="_blank" rel="noopener">Elwyn.org</a>
-        <a href="mailto:info@elwyn.io">Contact</a>
-      </div>
+      <div class="links"><a href="https://www.elwyn.org" target="_blank" rel="noopener">Elwyn.org</a> <a href="mailto:info@elwyn.io">Contact</a></div>
     </div>
   </footer>
 
-  <!-- APP JS (cache-busted) -->
-  <script src="/assets/app.js?v=2"></script>
+  <!-- JS last to ensure DOM exists -->
+  <script src="/assets/app.js?v=8" defer></script>
 </body>
 </html>
