--- a/index.html
+++ b/index.html
@@ -5,59 +5,53 @@
   <meta name="viewport" content="width=device-width,initial-scale=1" />
   <title>Elwyn AI</title>
   <meta name="theme-color" content="#7A012E" />
-  <base href="/" />
   <link rel="stylesheet" href="/assets/styles.css" />
 </head>
 <body>
-  <!-- Top bar -->
   <header class="topbar">
     <div class="wrap">
-      <a class="brand" href="/"><div class="logo">E</div><div class="brand-text"><strong>Elwyn</strong> AI</div></a>
-      <span class="chip success" id="apiStatus">checking…</span>
+      <div class="brand"><strong>Elwyn AI</strong></div>
+      <div class="chip success" id="apiStatus">checking…</div>
       <select id="engineSelect" class="engine">
-        <option value="latest" selected>Latest (auto)</option>
-        <option value="gpt-5-thinking">GPT-5 Thinking</option>
-        <option value="gpt-5">GPT-5</option>
-        <option value="gpt-4o">GPT-4o</option>
-        <option value="gpt-4o-mini">GPT-4o mini</option>
+        <option value="gpt-4o" selected>gpt-4o (default)</option>
+        <option value="latest">Latest (auto)</option>
+        <option value="gpt-5-thinking">gpt-5-thinking</option>
+        <option value="gpt-5">gpt-5</option>
+        <option value="gpt-4o-mini">gpt-4o-mini</option>
       </select>
     </div>
   </header>
 
   <main class="layout">
-    <!-- Sidebar -->
     <aside class="side">
-      <div class="side-group">
+      <div class="card">
         <div class="side-title">Tools</div>
         <button class="side-link is-active" data-view="chat">Chat</button>
         <button class="side-link" data-view="image">Text → Image</button>
         <button class="side-link" data-view="audio">Text → Sound (soon)</button>
         <button class="side-link" data-view="video">Text → Video (soon)</button>
       </div>
-
-      <div class="side-group small">
+      <div class="card small">
         <div class="side-title">About</div>
-        <p class="muted tiny">One page interface for global-scale AI services.</p>
+        <p class="muted tiny">One page interface for global-scale AI.</p>
         <p class="muted tiny">API: <code>elwyn.emailpeterokeke.workers.dev</code></p>
       </div>
     </aside>
 
-    <!-- Content panels -->
     <section class="content" id="view">
       <!-- Chat -->
       <section class="panel is-visible" data-panel="chat">
         <div class="card">
           <div class="card-head">
             <h2>Ask Elwyn AI</h2>
-            <p class="muted">Helpful, concise assistance. “Latest” aims for GPT-5 Thinking when available.</p>
+            <p class="muted">Helpful, concise assistance. “Latest” falls back if unavailable.</p>
           </div>
-
           <div class="chat">
             <div id="chatLog" class="chat-log"></div>
             <form id="chatForm" class="chat-input">
               <textarea id="chatBox" rows="4" placeholder="Ask anything…" autocomplete="off"></textarea>
               <div class="row">
-                <button class="btn primary" type="submit">Send</button>
+                <button class="btn primary" type="submit" id="sendBtn">Send</button>
                 <button class="btn" type="button" id="clearChat">Clear</button>
               </div>
             </form>
@@ -68,43 +62,24 @@
       <!-- Image -->
       <section class="panel" data-panel="image">
         <div class="card">
-          <div class="card-head"><h2>Text → Image</h2><p class="muted">High-quality images via the Worker.</p></div>
-          <form id="imgForm" class="form">
-            <textarea id="imgPrompt" rows="3" placeholder="e.g., warm, welcoming illustration…"></textarea>
+          <div class="card-head"><h2>Text → Image</h2></div>
+          <form id="imgForm">
+            <textarea id="imgPrompt" rows="3" placeholder="Describe the image…"></textarea>
             <div class="row"><button class="btn primary" type="submit">Generate</button></div>
           </form>
-          <div id="imgOut" class="mt"></div>
+          <div id="imgOut" class="mt-2"></div>
         </div>
       </section>
 
-      <!-- Audio (placeholder) -->
-      <section class="panel" data-panel="audio">
-        <div class="card">
-          <div class="card-head"><h2>Text → Sound</h2><p class="muted">Coming next.</p></div>
-          <form id="audForm"><button class="btn" type="submit">Try</button></form>
-          <pre id="audOut" class="mono muted"></pre>
-        </div>
-      </section>
-
-      <!-- Video (placeholder) -->
-      <section class="panel" data-panel="video">
-        <div class="card">
-          <div class="card-head"><h2>Text → Video</h2><p class="muted">Short clips for explainers & promos (soon).</p></div>
-          <form id="vidForm"><button class="btn" type="submit">Try</button></form>
-          <pre id="vidOut" class="mono muted"></pre>
-        </div>
-      </section>
+      <!-- Placeholders -->
+      <section class="panel" data-panel="audio"><div class="card"><h2>Text → Sound</h2><form id="audForm"><button class="btn" type="submit">Try (soon)</button></form><pre id="audOut" class="muted"></pre></div></section>
+      <section class="panel" data-panel="video"><div class="card"><h2>Text → Video</h2><form id="vidForm"><button class="btn" type="submit">Try (soon)</button></form><pre id="vidOut" class="muted"></pre></div></section>
     </section>
   </main>
 
-  <footer class="footer">
-    <div class="wrap foot">
-      <div>© 2025 Elwyn AI — crafted for clarity & care</div>
-      <div class="links"><a href="https://www.elwyn.org" target="_blank" rel="noopener">Elwyn.org</a> <a href="mailto:info@elwyn.io">Contact</a></div>
-    </div>
-  </footer>
+  <footer class="footer"><div class="wrap foot">© 2025 Elwyn AI</div></footer>
 
-  <!-- JS last to ensure DOM exists -->
-  <script src="/assets/app.js?v=8" defer></script>
+  <!-- App JS -->
+  <script src="/assets/app.js" defer></script>
 </body>
 </html>
