--- a/index.html
+++ b/index.html
@@ -112,227 +112,24 @@
     </aside>
 
     <!-- Views -->
-   <section class="panel" data-panel="mission">
-  <div class="card">
-    <h2>Mission — Non-Profit Behavioral Health (AI-assisted, human-in-the-loop)</h2>
-    <p class="muted">
-      We deliver equitable behavioral care at scale with a hybrid model: models handle continuous monitoring, analysis,
-      and immediate support; licensed clinicians lead complex therapy, crisis work, and individualized planning.
-    </p>
-
-    <!-- Strategic Pillars -->
-    <div class="grid" style="gap:16px;margin-top:8px">
-      <div class="card" style="padding:12px">
-        <h3 style="margin:0 0 8px 0">AI-Powered Assessment & Intake</h3>
-        <ul class="muted" style="margin:0;display:grid;gap:6px">
-          <li>Intelligent screening tools for preliminary behavioral assessments</li>
-          <li>Risk stratification to prioritize high-need clients</li>
-          <li>Automated crisis detection via speech/text/behavioral indicators</li>
-          <li>Cultural-competency matching to pair clients with suitable providers</li>
-        </ul>
-      </div>
-      <div class="card" style="padding:12px">
-        <h3 style="margin:0 0 8px 0">Remote Therapeutic Platforms</h3>
-        <ul class="muted" style="margin:0;display:grid;gap:6px">
-          <li>AI-enhanced teletherapy with real-time sentiment analysis & clinician prompts</li>
-          <li>VR exposure therapy for phobias, PTSD, and anxiety</li>
-          <li>Chatbot crisis counselors for 24/7 in-between-session support</li>
-          <li>Adaptive therapy modules that adjust to engagement and progress</li>
-        </ul>
-      </div>
-    </div>
-
-    <div class="grid" style="gap:16px;margin-top:16px">
-      <div class="card" style="padding:12px">
-        <h3 style="margin:0 0 8px 0">Personalized Treatment Planning</h3>
-        <ul class="muted" style="margin:0;display:grid;gap:6px">
-          <li>Evidence-based treatment matching from profile & outcomes data</li>
-          <li>Dynamic plan adjustments from real-time progress monitoring</li>
-          <li>Predictive relapse prevention — early warning for setbacks</li>
-        </ul>
-      </div>
-      <div class="card" style="padding:12px">
-        <h3 style="margin:0 0 8px 0">Digital Engagement & Support</h3>
-        <ul class="muted" style="margin:0;display:grid;gap:6px">
-          <li>Mobile coaching for skills practice between sessions</li>
-          <li>Automated check-ins & mood tracking with escalation protocols</li>
-          <li>Peer support matching via shared experiences & compatibility</li>
-          <li>Gamified interventions to increase engagement & retention</li>
-        </ul>
-      </div>
-    </div>
-
-    <div class="grid" style="gap:16px;margin-top:16px">
-      <div class="card" style="padding:12px">
-        <h3 style="margin:0 0 8px 0">Operational Excellence</h3>
-        <ul class="muted" style="margin:0;display:grid;gap:6px">
-          <li>Smart scheduling optimizing provider–client matching & availability</li>
-          <li>Automated documentation & progress-note generation</li>
-          <li>Outcome dashboards for funders & stakeholders</li>
-          <li>Multi-language support with real-time translation</li>
-        </ul>
-      </div>
-      <div class="card" style="padding:12px">
-        <h3 style="margin:0 0 8px 0">Key Differentiator</h3>
-        <p class="muted" style="margin:0">
-          Hybrid human-AI care: models manage routine monitoring, data analysis, and immediate support;
-          clinicians focus on therapeutic relationships, crisis intervention, and treatment planning.
-          Always human-in-the-loop.
-        </p>
-      </div>
-    </div>
-
-    <!-- Detailed Tables -->
-    <h3 style="margin-top:22px">I. Clinical & Direct Service Features</h3>
-    <div class="row" style="justify-content:flex-end">
-      <button class="btn tiny" data-export="#tbl-clinical">Export CSV</button>
-    </div>
-    <div class="table-wrap">
-      <table class="table" id="tbl-clinical">
-        <thead><tr><th>Feature</th><th>AI Mechanism</th><th>Non-Profit Value</th></tr></thead>
-        <tbody>
-          <tr>
-            <td>24/7 Conversational AI Support</td>
-            <td>NLP chatbots/virtual assistants trained in CBT/DBT-style skills.</td>
-            <td>Immediate, low-barrier support beyond business hours; maximizes accessibility.</td>
-          </tr>
-          <tr>
-            <td>Personalized Interventions</td>
-            <td>ML on mood tracking + text/voice signals and progress data.</td>
-            <td>Tailors exercises/resources to the user’s real-time state; improves outcomes.</td>
-          </tr>
-          <tr>
-            <td>Early Crisis Detection & Escalation</td>
-            <td>Sentiment & biomarker analysis for high-risk language/emotional shifts.</td>
-            <td>Flags SI/high distress; triggers hotline, clinician connect, or emergency workflow.</td>
-          </tr>
-          <tr>
-            <td>Remote Progress Monitoring</td>
-            <td>Wearables/Health APIs (sleep, HRV, activity) + mood check-ins.</td>
-            <td>Objective, continuous data for measurement-informed care and relapse tracking.</td>
-          </tr>
-          <tr>
-            <td>Automated Clinical Documentation</td>
-            <td>Consent-based ambient transcription; structured notes & summaries.</td>
-            <td>Frees clinician time; consistent, higher-quality documentation.</td>
-          </tr>
-          <tr>
-            <td>Diagnosis & Treatment Support</td>
-            <td>Predictive analytics over history & assessments with evidence pathways.</td>
-            <td>Faster, more accurate decisions; clinician retains final judgment.</td>
-          </tr>
-        </tbody>
-      </table>
-    </div>
-
-    <h3 style="margin-top:22px">II. Operational & Efficiency Features</h3>
-    <div class="row" style="justify-content:flex-end">
-      <button class="btn tiny" data-export="#tbl-ops">Export CSV</button>
-    </div>
-    <div class="table-wrap">
-      <table class="table" id="tbl-ops">
-        <thead><tr><th>Feature</th><th>AI Mechanism</th><th>Non-Profit Value</th></tr></thead>
-        <tbody>
-          <tr>
-            <td>Workflow Automation</td>
-            <td>RPA for scheduling, reminders, and follow-ups.</td>
-            <td>Cuts administrative burden/costs; reduces burnout.</td>
-          </tr>
-          <tr>
-            <td>Resource Optimization</td>
-            <td>Predictive modeling for demand, staffing, and high-risk periods.</td>
-            <td>Targets scarce resources to greatest need; prevents service gaps.</td>
-          </tr>
-          <tr>
-            <td>Grant Writing & Reporting</td>
-            <td>Generative models synthesize outcomes and draft proposals.</td>
-            <td>Improves fundraising efficiency with low overhead.</td>
-          </tr>
-          <tr>
-            <td>Custom Reporting Dashboards</td>
-            <td>Automated visualizations of outcomes, equity, and finance KPIs.</td>
-            <td>Demonstrates impact to board, donors, and regulators.</td>
-          </tr>
-        </tbody>
-      </table>
-    </div>
-
-    <h3 style="margin-top:22px">III. Non-Profit & Ethical Mandates</h3>
-    <div class="row" style="justify-content:flex-end">
-      <button class="btn tiny" data-export="#tbl-ethics">Export CSV</button>
-    </div>
-    <div class="table-wrap">
-      <table class="table" id="tbl-ethics">
-        <thead><tr><th>Feature</th><th>Description & Rationale</th></tr></thead>
-        <tbody>
-          <tr>
-            <td>HIPAA/GDPR-Compliant Security</td>
-            <td>End-to-end encryption, anonymization, and robust access controls for sensitive data.</td>
-          </tr>
-          <tr>
-            <td>Equity & Bias Mitigation</td>
-            <td>Diverse datasets; recurring algorithmic audits; fairness metrics across demographics.</td>
-          </tr>
-          <tr>
-            <td>Cost-Sensitive Scalability</td>
-            <td>Low variable cost per user to reach uninsured/underinsured communities at scale.</td>
-          </tr>
-          <tr>
-            <td>Transparency & Human Oversight</td>
-            <td>Human-in-the-loop; clear disclosures that users interact with AI; clinician has final say.</td>
-          </tr>
-          <tr>
-            <td>Ethical Data Ownership</td>
-            <td>User-owned data with granular consent & revocation; transparent retention/deletion.</td>
-          </tr>
-          <tr>
-            <td>Intake Triage Bot</td>
-            <td>Collects basics, screens for risk (SI/HI), and routes to an appropriate clinician.</td>
-          </tr>
-          <tr>
-            <td>Safety Classifier</td>
-            <td>Real-time risk flags in chat/calls with automated escalation playbooks.</td>
-          </tr>
-          <tr>
-            <td>Clinician Copilot</td>
-            <td>Draft notes, visit summaries, ICD-10/SNOMED suggestions, and after-visit plans.</td>
-          </tr>
-        </tbody>
-      </table>
-    </div>
-
-    <h3 style="margin-top:22px">Key Differentiator</h3>
-    <p class="muted">
-      A hybrid human-AI care model where models manage monitoring, analysis, and immediate support,
-      while clinicians provide deep therapeutic relationships, crisis intervention, and treatment planning —
-      maximizing reach and quality with an explicit human-in-the-loop guarantee.
-    </p>
-  </div>
-
-  <!-- Self-contained CSV export helper for the three tables above -->
-  <script>
-    (function(){
-      document.querySelectorAll('.btn.tiny[data-export]').forEach(btn=>{
-        btn.addEventListener('click', ()=>{
-          const table = document.querySelector(btn.getAttribute('data-export'));
-          if(!table) return;
-          let csv = "";
-          table.querySelectorAll("tr").forEach(tr=>{
-            const cells = [...tr.children].map(td => `"${td.textContent.replace(/"/g,'""')}"`);
-            csv += cells.join(",") + "\n";
-          });
-          const blob = new Blob([csv], {type:"text/csv;charset=utf-8"});
-          const a = document.createElement("a");
-          a.href = URL.createObjectURL(blob);
-          a.download = (table.id || "table") + ".csv";
-          a.click();
-          URL.revokeObjectURL(a.href);
-        });
-      });
-    })();
-  </script>
-</section>
-
+    <section id="view" class="grid">
+      <!-- Chat -->
+      <section class="panel is-visible" data-panel="chat">
+        <div class="card">
+          <h2>Ask Elwyn AI</h2>
+          <p class="muted">Smart chat with built-in tools for time, weather, and web lookups.</p>
+          <div class="grid">
+            <div id="chatLog" class="chat-log" aria-live="polite"></div>
+            <form id="chatForm" class="grid">
+              <textarea id="chatBox" rows="4" placeholder="Ask anything… (e.g., “weather in Lagos”, “what’s the time in London?”, “latest on electric vehicles”)"></textarea>
+              <div class="row">
+                <button class="btn primary" type="submit">Send</button>
+                <button class="btn" type="button" id="clearChat">Clear</button>
+              </div>
+            </form>
+          </div>
+        </div>
+      </section>
 
       <!-- Image -->
       <section class="panel" data-panel="image">
